# scapy-rpc

./: .gitignore  README.md  compile.sh  get-idls.sh  tox.ini
.github/: check_spdx.sh
.github/workflows/: unittests.yml
idl/: ms-dtyp.idl  srvs.idl
midl-to-scapy/: README.md  __init__.py  compile.sh  midl_convert.py  midl_parser.py  midl_resolve.py  midl_to_scapy.py  scapy_obj.py  utils.py
midl-to-scapy/idl/: LICENSE  README.md  idl_scraper.py
midl-to-scapy/idl/builtins/: ept.idl  mgmt.idl  rpctypes.idl
midl-to-scapy/idl/exchange/: ms-oxcrpc.idl
midl-to-scapy/idl/patches/: mc-iisa.idl.patch  mc-mqac.idl.patch  ms-adtg.idl.patch  ms-adts-claims.idl.patch  ms-cmrp_clusapi3.idl.patch  ms-comev.idl.patch  ms-csvp.idl.patch  ms-dcom.patch  ms-dfsrh.idl.patch  ms-dhcpm.idl.patch  ms-dltm.idl.patch  ms-dmrp_dmintf3.idl.patch  ms-eerr.idl.patch  ms-even6.idl.patch  ms-fasp.idl.patch  ms-fax_fax.idl.patch  ms-frs2.idl.patch  ms-fsrm.idl.patch  ms-ioi.idl.patch  ms-lsat.idl.patch  ms-mqds.idl.patch  ms-mqmp.idl.patch  ms-mqmq.idl.patch  ms-mqmr.idl.patch  ms-msrp_msgsvc.idl.patch  ms-nrpc.idl.patch  ms-nrpc.patch  ms-oaut.idl.patch  ms-oxcrpc.idl.patch  ms-pac.idl.patch  ms-par.idl.patch  ms-pla.idl.patch  ms-rai.idl.patch  ms-raiw_winsif.idl.patch  ms-rprn.idl.patch  ms-rrasm.idl.patch  ms-rsmp.idl.patch  ms-rsp_initshutdown.idl.patch  ms-rsp_windowsshutdown.idl.patch  ms-rsp_winreg.idl.patch  (+14 more)
midl-to-scapy/idl/sharepoint/: ms-ssp.idl
midl-to-scapy/idl/win/: mc-ccfg.idl  mc-iisa.idl  mc-mqac.idl  ms-adtg.idl  (+111 more)
midl-to-scapy/idl/win-sdk/: Unknwnbase.idl  oaidl.idl
scapy-rpc/: README.md  pyproject.toml  setup.py
scapy-rpc/msrpcs/: Unknwnbase.py  __init__.py  ept.py  mc_ccfg.py  mc_iisa.py  mc_mqac.py  mgmt.py  ms_adtg.py  ms_adts_claims.py  ms_bkrp.py  ms_bpau.py  ms_brwsa.py  ms_capr.py  ms_cmpo.py  ms_cmrp_clusapi2.py  ms_cmrp_clusapi3.py  ms_com.py  ms_coma.py  ms_comev.py  ms_comt.py  ms_csra.py  ms_csvp.py  ms_dcom.py  ms_dfsnm.py  ms_dfsrh.py  ms_dhcpm.py  ms_dltm.py  ms_dltw.py  ms_dmrp_dmintf.py  ms_dmrp_dmintf3.py  ms_dnsp.py  ms_drsr.py  ms_dssp.py  ms_eerr.py  ms_efsr.py  ms_even.py  ms_even6.py  ms_fasp.py  ms_fax_fax.py  ms_fax_faxclient.py  (+74 more)
src/: midl-to-scapy.py
