[build-system]
requires = [ "setuptools>=62.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-rpc"
version = "0.0.2"
dynamic = ["readme"]
requires-python = ">=3.7, <4"
description = "Scapy RPC definitions"
classifiers = [
    "Framework :: Scapy",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]

[tool.setuptools.packages.find]
include = [
    "msrpcs",
]

[tool.black]
line-length = 88
target-version = ['py37']
extend-exclude = "ply/*"
