[build-system]
requires = [ "setuptools>=62.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-rpc"
version = "0.0.3"
dynamic = ["readme"]
authors = [
    { name="Gabriel POTTER" },
]
license = "GPL-2.0-only"
requires-python = ">=3.7, <4"
description = "Scapy RPC definitions"
classifiers = [
    "Framework :: Scapy",
]

[tool.setuptools.packages.find]
include = [
    "msrpcs",
]

[tool.black]
line-length = 88
target-version = ['py37']
extend-exclude = "ply/*"
