[build-system]
requires = [ "setuptools>=62.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-rpc"
version = "0.0.3"
dynamic = ["readme"]
authors = [
    { name="Gabriel POTTER" },
]
license = "GPL-2.0-only"
requires-python = ">=3.7, <4"
description = "Scapy RPC definitions"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[tool.setuptools.packages.find]
include = [
    "msrpcs",
]

[tool.black]
line-length = 88
target-version = ['py37']
extend-exclude = "ply/*"
